--- a/src/mainBundle/Resources/config/routing.yml
+++ b/src/mainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-main_homepage:
-    path:     /
-    defaults: { _controller: mainBundle:Main:index }
+#main_homepage:
+#    path:     /
+#    defaults: { _controller: mainBundle:Main:index }
