--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,6 @@ main:
     resource: "@mainBundle/Controller"
     type: annotation
     prefix:   /
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
